aggiunta codici alle squadre oltre a dummy. Prestazioni con la differenza delle statistiche e con l'utilizzo dei codici

--- a/definitivo/analysis.ipynb
+++ b/definitivo/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,26 +22,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.readDiff_home_away()\n",
-    "a.get_dummies()"
+    "a.readDiff_home_away()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O faccio il dummy o uso i codici"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#a.get_dummies()\n",
+    "a.get_codes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.diff_dataset.drop(columns=['goals'], inplace=True)\n",
     "m.prepare(a.diff_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -97,23 +114,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.578947</td>\n",
-       "      <td>0.555485</td>\n",
-       "      <td>0.554496</td>\n",
-       "      <td>0.554113</td>\n",
-       "      <td>0.575179</td>\n",
-       "      <td>0.578947</td>\n",
-       "      <td>0.576099</td>\n",
+       "      <td>0.592105</td>\n",
+       "      <td>0.572500</td>\n",
+       "      <td>0.565991</td>\n",
+       "      <td>0.566675</td>\n",
+       "      <td>0.594178</td>\n",
+       "      <td>0.592105</td>\n",
+       "      <td>0.590210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.486842</td>\n",
-       "      <td>0.406593</td>\n",
-       "      <td>0.425738</td>\n",
-       "      <td>0.414485</td>\n",
-       "      <td>0.460816</td>\n",
-       "      <td>0.486842</td>\n",
-       "      <td>0.472047</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.412864</td>\n",
+       "      <td>0.437232</td>\n",
+       "      <td>0.421645</td>\n",
+       "      <td>0.465379</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.479250</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -123,20 +140,20 @@
        "                     Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
        "Model                                                                      \n",
        "Logistic Regression  0.605263               0.541737            0.544264   \n",
-       "Decision Tree        0.578947               0.555485            0.554496   \n",
-       "Random Forest        0.486842               0.406593            0.425738   \n",
+       "Decision Tree        0.592105               0.572500            0.565991   \n",
+       "Random Forest        0.500000               0.412864            0.437232   \n",
        "\n",
        "                     Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
        "Model                                                                 \n",
        "Logistic Regression              0.542088                  0.599711   \n",
-       "Decision Tree                    0.554113                  0.575179   \n",
-       "Random Forest                    0.414485                  0.460816   \n",
+       "Decision Tree                    0.566675                  0.594178   \n",
+       "Random Forest                    0.421645                  0.465379   \n",
        "\n",
        "                     Avg Recall (weighted)  Avg F1-score (weighted)  \n",
        "Model                                                                \n",
        "Logistic Regression               0.605263                 0.601447  \n",
-       "Decision Tree                     0.578947                 0.576099  \n",
-       "Random Forest                     0.486842                 0.472047  "
+       "Decision Tree                     0.592105                 0.590210  \n",
+       "Random Forest                     0.500000                 0.479250  "
       ]
      },
      "metadata": {},
