--- a/definitivo/download.ipynb
+++ b/definitivo/download.ipynb
@@ -15,6 +15,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Quello che viene fatto è fare scraping attraverso https://fbref.com/it/comp/11/2021-2022/Statistiche-di-Serie-A-2021-2022 nella stagione 2021-2022 e vengono estratte tutte le informazioni relative alle varie squadre che giocano nella stagione. \n",
+    "\n",
+    "I dati provenienti da diversi link vengono mergiati. \n",
+    "Per poter classificare ho pensato a 3 classi: V (vittoria), P (persa), N (pareggio).\n",
+    "Il problema è che scaricando tutte le partite per tutte le squadre, ci saranno partite doppie, ad esempio: \n",
+    "- Atalanta V Bologna\n",
+    "- Bologna P Atalanta\n",
+    "\n",
+    "Per questo vado a considerare nella classificazione solo le squadre in casa, così quando si vuole predire il risultato di una partita, ottengo la classificazione per la squadra di casa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Dataset Serie A matches\n",
+    "Per la realizzazione del dataset ho trovato in letteratura l'elenco dei dati più importanti per la predizione dei risultati delle partite. \n",
+    "\n",
+    "https://iopscience.iop.org/article/10.1088/1757-899X/226/1/012099/pdf\n",
+    "\n",
+    "Per questo dataset ho utilizzato le statistiche della stagione 2021/22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Scaricamento di tutti i match\n",
     "In questa sezione vengono scaricate tutte le statistiche delle partite giocate da ogni singola squadra nel campionato.\n",
     "Le statistiche in un match sono relative alla squadra presa in considerazione, non all'avversario (indipendentemente da che sia in casa o in trasferta)."
