--- a/definitivo/calculate_avg.ipynb
+++ b/definitivo/calculate_avg.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from analysis import MatchAnalysis\n",
-    "from ml_model import MlModel"
+    "from ml_model import MlModel\n",
+    "from team import Team"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,53 +22,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'21-08-2021'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.matches_fe_team.Data[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "a.matches_fe_team.Data = pd.to_datetime(a.matches_fe_team.Data, format='%d-%m-%Y')\n",
-    "\n",
-    "from datetime import datetime\n",
-    "import time\n",
-    "\n",
-    "s = datetime.strptime(\"24-12-2021\", '%d-%m-%Y')\n",
-    "\n",
-    "matches = a.matches_fe_team[a.matches_fe_team.Data <= s]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Cosa devo fare?\n",
-    "- Prendere il dataset con i match\n",
-    "- Pulire i campi secondo la nomenclatura\n",
-    "- Dividere i match per squadra: \n",
-    "    * creare un dizionario con chiave il nome della squadra e valore il dataframe relativo alle partite\n",
-    "- Prendo il dataset iniziale con i match e lo salvo ordinato per data\n",
-    "- Divido il dataset entro una certa data (train set) e prendo le partite della giornata subito successiva (verrà usata come test)"
+    "- Prendere il dataset e dividere i match per squadra: ✓\n",
+    "    * creare un dizionario con chiave il nome della squadra e valore il dataframe relativo alle partite ✓\n",
+    "- Prendo il dataset iniziale con i match e lo divido entro una certa data creando train set e con le partite della giornata subito successiva creo test set\n",
+    "    * Nel test set devo cancellare tutti i dati e prendere la media delle ultime partite "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "\n",
+    "limit_date = datetime.strptime(\"2021-12-24\", '%Y-%m-%d')\n",
+    "\n",
+    "aa = MatchAnalysis()\n",
+    "#matches = aa.matches_fe_team[a.matches_fe_team.date <= limit_date]\n",
+    "aa.matches_fe_team['date'] = pd.to_datetime(aa.matches_fe_team['date'], format='%Y-%m-%d') #devo convertire la data altrimenti mi dà \n",
+    "\n",
+    "dataset_model = aa.matches_fe_team[aa.matches_fe_team.date < limit_date] "
    ]
   },
   {
@@ -76,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aa = MatchAnalysis()\n"
+    "dataset_model"
    ]
   }
  ],
