--- a/definitivo/calculate_avg.ipynb
+++ b/definitivo/calculate_avg.ipynb
@@ -1,27 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from analysis import MatchAnalysis\n",
-    "from ml_model import MlModel\n",
-    "from team import Team"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = MatchAnalysis()\n",
-    "m = MlModel()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,21 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "import time\n",
-    "import pandas as pd\n",
-    "\n",
-    "limit_date = datetime.strptime(\"2021-12-24\", '%Y-%m-%d')\n",
-    "\n",
-    "aa = MatchAnalysis()\n",
-    "#matches = aa.matches_fe_team[a.matches_fe_team.date <= limit_date]\n",
-    "aa.matches_fe_team['date'] = pd.to_datetime(aa.matches_fe_team['date'], format='%Y-%m-%d') #devo convertire la data altrimenti mi dà \n",
-    "\n",
-    "dataset_model = aa.matches_fe_team[aa.matches_fe_team.date < limit_date] "
+    "from analysis import MatchAnalysis\n",
+    "from ml_model import MlModel\n",
+    "from team import Team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma = MatchAnalysis()\n",
+    "ml = MlModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma.reduce_dataset()\n",
+    "ma.create_team_dataset()\n",
+    "ma.split_and_set_avg()"
    ]
   },
   {
@@ -57,7 +49,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_model"
+    "ma.X_test.head(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml.X_train, ml.X_test, ml.y_train, ml.y_test = ma.X_train, ma.X_test, ma.y_train, ma.y_test\n",
+    "ml.fit()\n"
    ]
   }
  ],
