spostamento codice calcolo media nella classe team: quando viene preso in considerazione il match, vengono presi i dataset dei due match e vengono calcolate le medie. Medie che possono essere calcolate su tutti i match precedenti alla data x del match oppure demia dei y match precedenti

--- a/definitivo/calculate_avg.ipynb
+++ b/definitivo/calculate_avg.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cosa devo fare?\n",
-    "- Prendere il dataset e dividere i match per squadra: ✓\n",
-    "    * creare un dizionario con chiave il nome della squadra e valore il dataframe relativo alle partite ✓\n",
-    "- Prendo il dataset iniziale con i match e lo divido entro una certa data creando train set e con le partite della giornata subito successiva creo test set\n",
-    "    * Nel test set devo cancellare tutti i dati e prendere la media delle ultime partite "
+    "In questo script vado a prendere i match entro una certa data e lo considero come dataset ridotto attraverso il metodo reduce_dataset (posso anche farne a meno). Successivamente vado a creare i vari dataset partendo da questo per le varie squadre con tutte le statistiche. \n",
+    "Decido poi dove tagliare il dataset per fare train e test set.\n",
+    "Nel test set sostituisco i dati con le medie dei match precedenti"
    ]
   },
   {
@@ -38,28 +36,495 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma.reduce_dataset()\n",
+    "ma.divide_and_merge_home_away()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ma.reduce_dataset(\"2021-09-13\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ma.create_team_dataset()\n",
     "ma.split_and_set_avg()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>home</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>away</th>\n",
+       "      <th>total_shots</th>\n",
+       "      <th>shots_on_target</th>\n",
+       "      <th>goals_on_penalty</th>\n",
+       "      <th>total_penalties</th>\n",
+       "      <th>completed_passings</th>\n",
+       "      <th>total_passings</th>\n",
+       "      <th>corners</th>\n",
+       "      <th>percentage_possession</th>\n",
+       "      <th>fouls</th>\n",
+       "      <th>yellow_cards</th>\n",
+       "      <th>red_cards</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>304</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>184.0</td>\n",
+       "      <td>153.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>305</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-79.0</td>\n",
+       "      <td>-93.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>306</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-7.5</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-169.0</td>\n",
+       "      <td>-141.0</td>\n",
+       "      <td>-2.5</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-4.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-359.0</td>\n",
+       "      <td>-301.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>13</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-56.5</td>\n",
+       "      <td>-47.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-7.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>376</th>\n",
+       "      <td>15</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>63.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>377</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-5.5</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-218.0</td>\n",
+       "      <td>-205.0</td>\n",
+       "      <td>-5.5</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>378</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>14</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>207.5</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-86.0</td>\n",
+       "      <td>-81.5</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-8.5</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>76 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    home  goals away  total_shots  shots_on_target  goals_on_penalty  \\\n",
+       "304    6    0.5    5          0.5              0.0               0.0   \n",
+       "305    3   -0.5   16         -3.0             -1.0               0.0   \n",
+       "306    2   -0.5    8         -7.5             -4.0               0.0   \n",
+       "307    7    0.0    6         -1.0             -1.0               0.5   \n",
+       "308    5   -0.5    9         -4.5             -1.0               0.0   \n",
+       "..   ...    ...  ...          ...              ...               ...   \n",
+       "375   13   -0.5   18          5.0             -1.0               0.5   \n",
+       "376   15   -0.5   10          0.5             -1.0               0.0   \n",
+       "377   16    0.0   11         -5.5             -2.0              -0.5   \n",
+       "378    7    1.5   14         16.0              5.0               0.0   \n",
+       "379   19    1.5    2          0.5              2.0               0.5   \n",
+       "\n",
+       "     total_penalties  completed_passings  total_passings  corners  \\\n",
+       "304              0.5               184.0           153.5      2.5   \n",
+       "305              0.0               -79.0           -93.0     -2.0   \n",
+       "306              0.0              -169.0          -141.0     -2.5   \n",
+       "307              0.0                60.0            29.5     -1.5   \n",
+       "308              0.0              -359.0          -301.5      0.0   \n",
+       "..               ...                 ...             ...      ...   \n",
+       "375              1.0               -56.5           -47.5      2.5   \n",
+       "376              0.0                73.5            63.5      1.5   \n",
+       "377             -0.5              -218.0          -205.0     -5.5   \n",
+       "378              0.0               221.0           207.5      7.5   \n",
+       "379              1.0               -86.0           -81.5     -1.0   \n",
+       "\n",
+       "     percentage_possession  fouls  yellow_cards  red_cards  \n",
+       "304                   22.0    0.5           3.0        0.5  \n",
+       "305                   -9.0    0.0          -0.5        0.5  \n",
+       "306                   -9.0    4.0          -1.0        0.0  \n",
+       "307                   -6.0    2.5          -1.0        0.0  \n",
+       "308                  -20.0    1.5           1.0        0.5  \n",
+       "..                     ...    ...           ...        ...  \n",
+       "375                    0.5   -7.5           1.0        0.5  \n",
+       "376                    3.0    2.0          -0.5        0.0  \n",
+       "377                  -25.0   -2.0           0.0        0.0  \n",
+       "378                   24.5   -2.0          -0.5       -0.5  \n",
+       "379                   -8.5   -3.5           2.5        0.0  \n",
+       "\n",
+       "[76 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ma.X_test.head(9)"
+    "ma.X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inter\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ma.get_name_by_id(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Avg Precision (macro)</th>\n",
+       "      <th>Avg Recall (macro)</th>\n",
+       "      <th>Avg F1-score (macro)</th>\n",
+       "      <th>Avg Precision (weighted)</th>\n",
+       "      <th>Avg Recall (weighted)</th>\n",
+       "      <th>Avg F1-score (weighted)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.432821</td>\n",
+       "      <td>0.423011</td>\n",
+       "      <td>0.422511</td>\n",
+       "      <td>0.464413</td>\n",
+       "      <td>0.434211</td>\n",
+       "      <td>0.444771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Support Vector Machine</th>\n",
+       "      <td>0.460526</td>\n",
+       "      <td>0.305789</td>\n",
+       "      <td>0.396552</td>\n",
+       "      <td>0.344043</td>\n",
+       "      <td>0.355853</td>\n",
+       "      <td>0.460526</td>\n",
+       "      <td>0.400007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.411977</td>\n",
+       "      <td>0.404169</td>\n",
+       "      <td>0.401304</td>\n",
+       "      <td>0.442612</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.424578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.411977</td>\n",
+       "      <td>0.404169</td>\n",
+       "      <td>0.401304</td>\n",
+       "      <td>0.442612</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>0.424578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K-Nearest Neighbors</th>\n",
+       "      <td>0.342105</td>\n",
+       "      <td>0.357635</td>\n",
+       "      <td>0.328240</td>\n",
+       "      <td>0.332248</td>\n",
+       "      <td>0.393885</td>\n",
+       "      <td>0.342105</td>\n",
+       "      <td>0.357757</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Accuracy  Avg Precision (macro)  Avg Recall (macro)  \\\n",
+       "Model                                                                         \n",
+       "Logistic Regression     0.434211               0.432821            0.423011   \n",
+       "Support Vector Machine  0.460526               0.305789            0.396552   \n",
+       "Decision Tree           0.421053               0.411977            0.404169   \n",
+       "Random Forest           0.421053               0.411977            0.404169   \n",
+       "K-Nearest Neighbors     0.342105               0.357635            0.328240   \n",
+       "\n",
+       "                        Avg F1-score (macro)  Avg Precision (weighted)  \\\n",
+       "Model                                                                    \n",
+       "Logistic Regression                 0.422511                  0.464413   \n",
+       "Support Vector Machine              0.344043                  0.355853   \n",
+       "Decision Tree                       0.401304                  0.442612   \n",
+       "Random Forest                       0.401304                  0.442612   \n",
+       "K-Nearest Neighbors                 0.332248                  0.393885   \n",
+       "\n",
+       "                        Avg Recall (weighted)  Avg F1-score (weighted)  \n",
+       "Model                                                                   \n",
+       "Logistic Regression                  0.434211                 0.444771  \n",
+       "Support Vector Machine               0.460526                 0.400007  \n",
+       "Decision Tree                        0.421053                 0.424578  \n",
+       "Random Forest                        0.421053                 0.424578  \n",
+       "K-Nearest Neighbors                  0.342105                 0.357757  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ml.X_train, ml.X_test, ml.y_train, ml.y_test = ma.X_train, ma.X_test, ma.y_train, ma.y_test\n",
-    "ml.fit()\n"
+    "ml.fit()\n",
+    "ml.predict()\n",
+    "ml.gen_report()\n",
+    "ml.E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['V', 'P', 'P', 'V', 'P', 'P', 'V', 'V', 'P', 'P', 'V', 'P', 'V',\n",
+       "       'V', 'P', 'P', 'V', 'V', 'V', 'P', 'V', 'V', 'P', 'P', 'P', 'V',\n",
+       "       'P', 'V', 'V', 'P', 'V', 'V', 'P', 'V', 'V', 'P', 'P', 'P', 'V',\n",
+       "       'V', 'P', 'V', 'P', 'P', 'V', 'P', 'P', 'V', 'P', 'V', 'V', 'P',\n",
+       "       'P', 'P', 'P', 'P', 'P', 'V', 'V', 'P', 'P', 'V', 'P', 'P', 'P',\n",
+       "       'P', 'P', 'V', 'P', 'V', 'V', 'P', 'V', 'P', 'V', 'P'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ml.predictions['Support Vector Machine']"
    ]
   }
  ],
